--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -34,7 +34,7 @@
 
 
   <main class="mx-auto">
-    <header class="text-white px-24 py-10 bg-sky-500">
+    <header class="text-white px-5 lg:px-24 py-10 bg-sky-500">
       <h1 class="text-2xl font-semibold inline-block mb-2">Pilihan Kelas di Codinger</h1>
       <p class="font-light">Tersedia dalam berbagai teknologi populer</p>
     </header>
