--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -1,93 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/output.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body class="font-poppins bg-slate-100">
-    <nav class="navbar sticky top-0 bg-white z-50">
-      <div
-        class="container mx-auto flex justify-between items-center py-4 md:py-6 pl-6 pr-3 lg:px-16"
-      >
-        <a href="" class="font-semibold text-3xl">Codinger</a>
-        <div class="navbar-nav gap-16 items-center hidden md:flex">
-          <div class="nav-menu flex gap-6">
-            <a href="./" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
-              >Beranda</a
-            >
-            <a
-              href="./kelas.html"
-              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
-              >Kelas</a
-            >
-            <a
-              href="./webinar.html"
-              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
-              >Webinar</a
-            >
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" href="../css/output.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet" />
+</head>
 
-          </div>
-          <div class="flex gap-6 px-2">
-            <a
-              href="./login.html"
-              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md hover:bg-sky-500 hover:text-white transition duration-300"
-              >Masuk</a
-            >
-            <a
-              href="./register.html"
-              class="px-5 py-1.5 bg-sky-500 text-white rounded-md hover:bg-sky-600 transition duration-300"
-              >Daftar</a
-            >
-          </div>
+<body class="font-poppins bg-slate-100">
+  <nav class="navbar sticky top-0 bg-white z-50">
+    <div class="container mx-auto flex justify-between items-center py-4 md:py-6 pl-6 pr-3 lg:px-16">
+      <a href="" class="font-semibold text-3xl">Codinger</a>
+      <div class="navbar-nav gap-16 items-center hidden md:flex">
+        <div class="nav-menu flex gap-6">
+          <a href="./" class="px-4 py-1.5 hover:bg-slate-50 rounded-md">Beranda</a>
+          <a href="./courses.html" class="px-4 py-1.5 hover:bg-slate-50 rounded-md">Kelas</a>
+          <a href="./webinar.html" class="px-4 py-1.5 hover:bg-slate-50 rounded-md">Webinar</a>
+
         </div>
-        <button
-          class="block md:hidden rounded-md px-3 py-1.5 hover:bg-slate-50 active:bg-slate-100 nav-btn"
-        >
-          <i class="fa-solid fa-bars text-2xl"></i>
-        </button>
+        <div class="flex gap-6 px-2">
+          <a href="./login.html"
+            class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md hover:bg-sky-500 hover:text-white transition duration-300">Masuk</a>
+          <a href="./register.html"
+            class="px-5 py-1.5 bg-sky-500 text-white rounded-md hover:bg-sky-600 transition duration-300">Daftar</a>
+        </div>
       </div>
-    </nav>
-    <div class="flex w-full">
-      <div class="w-full h-screen">
-        <div class="max-w-xl mx-auto border p-4 mt-24 pt-20 bg-white relative">
-          <div class="absolute left-1/2 -top-[6.5rem] -translate-x-1/2 z-0">
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              viewBox="0 0 24 24"
-              class="w-48 h-48 fill-slate-200 mx-auto"
-            >
-              <path
-                fill-rule="evenodd"
-                d="M18.685 19.097A9.723 9.723 0 0 0 21.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 0 0 3.065 7.097A9.716 9.716 0 0 0 12 21.75a9.716 9.716 0 0 0 6.685-2.653Zm-12.54-1.285A7.486 7.486 0 0 1 12 15a7.486 7.486 0 0 1 5.855 2.812A8.224 8.224 0 0 1 12 20.25a8.224 8.224 0 0 1-5.855-2.438ZM15.75 9a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </div>
-          <h2 class="text-center font-semibold text-2xl">Masuk</h2>
-          <form action="" class="flex flex-col gap-2">
-            <div class="flex flex-col">
-              <label for="">Username</label>
-              <input type="text" class="input" placeholder="cth.: johndoe" />
-            </div>
-            <div class="flex flex-col">
-              <label for="">Password</label>
-              <input type="text" class="input" placeholder="min: 8 karakter" />
-            </div>
-            <button type="submit" class="btn-primary text-white">Masuk</button>
-            <p class="text-center">
-              Belum punya akun?
-              <a href="./register.html" class="text-sky-500">Daftar</a>
-            </p>
-          </form>
+      <button class="block md:hidden rounded-md px-3 py-1.5 hover:bg-slate-50 active:bg-slate-100 nav-btn">
+        <i class="fa-solid fa-bars text-2xl"></i>
+      </button>
+    </div>
+  </nav>
+  <div class="flex w-full">
+    <div class="w-full h-screen">
+      <div class="max-w-xl mx-auto border p-4 mt-24 pt-20 bg-white relative">
+        <div class="absolute left-1/2 -top-[6.5rem] -translate-x-1/2 z-0">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="w-48 h-48 fill-slate-200 mx-auto">
+            <path fill-rule="evenodd"
+              d="M18.685 19.097A9.723 9.723 0 0 0 21.75 12c0-5.385-4.365-9.75-9.75-9.75S2.25 6.615 2.25 12a9.723 9.723 0 0 0 3.065 7.097A9.716 9.716 0 0 0 12 21.75a9.716 9.716 0 0 0 6.685-2.653Zm-12.54-1.285A7.486 7.486 0 0 1 12 15a7.486 7.486 0 0 1 5.855 2.812A8.224 8.224 0 0 1 12 20.25a8.224 8.224 0 0 1-5.855-2.438ZM15.75 9a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
+              clip-rule="evenodd" />
+          </svg>
         </div>
+        <h2 class="text-center font-semibold text-2xl">Masuk</h2>
+        <form action="" class="flex flex-col gap-2">
+          <div class="flex flex-col">
+            <label for="">Username</label>
+            <input type="text" class="input" placeholder="cth.: johndoe" />
+          </div>
+          <div class="flex flex-col">
+            <label for="">Password</label>
+            <input type="text" class="input" placeholder="min: 8 karakter" />
+          </div>
+          <button type="submit" class="btn-primary text-white">Masuk</button>
+          <p class="text-center">
+            Belum punya akun?
+            <a href="./register.html" class="text-sky-500">Daftar</a>
+          </p>
+        </form>
       </div>
     </div>
-  </body>
+  </div>
+  <footer class="mt-4 py-8 px-8 lg:px-36 gap-6 bg-slate-300 flex justify-between flex-wrap">
+    <div class="">
+      <h1 class="text-3xl font-semibold">Codinger</h1>
+      <div class="flex gap-5 text-2xl mt-6 mb-4">
+        <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+      </div>
+      <div>&copy; Codinger 2024</div>
+    </div>
+    <div class="flex gap-8 md:gap-24">
+      <div>
+        <h2 class="text-2xl font-semibold mb-6">Navigasi</h2>
+        <a href="#" class="mt-3 block w-fit">Beranda</a>
+        <a href="#" class="mt-3 block w-fit">Navigasi</a>
+      </div>
+      <div>
+        <h2 class="text-2xl font-semibold mb-6">Akun</h2>
+        <a href="#" class="mt-3 block w-fit">Masuk</a>
+        <a href="#" class="mt-3 block w-fit">Daftar</a>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
